  - Remove dependency on OpenSSL library
  - Add dependency on wolfSSL library version 5.2.0
  - Update libhdhomerun library to version 20220203
  - Update SQLite database engine to version 3.38.0
  - Update cURL library to version 7.82.0
  - Update libxml2 library to version 2.9.13
  - Add available HDHomeRun ecosystem object counts to 'List discovered devices' PVR Client specific setting
  - Fix bug causing a malformed URL to be sent to the backend when querying legacy device channel lineups

v20.8.1 (2022.02.12)
  - Fix HTTP query error messages reporting the multipart/form-data POST operation method as 'get'
  - Fix bug preventing HTTP device discovery from completing if a device cannot be contacted
  - Fix bug preventing EPG data from being transferred to Kodi if 'Show DRM protected channels in channel lineups' is enabled
  - Add a date/time stamp to the end of messages stored in the error log
  - Add new "Use HTTP proxy server for discovery operations" Advanced option
  - Remove "Disable reporting of active Live TV tuner signal status" Interface option
  - Trigger an EPG data resend to Kodi when option 'Use backend genre string(s) in Electronic Program Guide (EPG)' has changed

v20.8.0 (2022.01.31)
  - Add dependency on OpenSSL library version 3.0.1
  - Update SQLite database engine to version 3.37.2
  - Update cURL library to version 7.81.0
  - Adapt to HDHomeRun backend API 20220127 TLS v1.2 requirements
  - Change HTTP POST method to multipart/form-data when modifying backend recording rules

v20.7.0 (2022.01.12)
  - Update SQLite database engine to version 3.37.0
  - Update cURL library to version 7.79.1
  - Update libxml2 library to version 2.9.11
  - Add support for legacy HDHomeRun tuner devices
  - Change timer rule duplicate prevention name 'Record only new episodes' to 'Record new episodes only'
  - Change timer rule duplicate prevention name 'Record only recent episodes' to 'Record current season episodes only'

v4.6.0 (2021.08.26)